--- a/Changes
+++ b/Changes
@@ -3,4 +3,10 @@ Revision history for Perl extension Devel::Depend::Cpp.
 0.01  Fri Oct  3 16:52:24 2003
 	- original version; created by h2xs 1.21 with options
 		-AX -n Devel::Depend::Cpp
+		
+0.02  Mon Nov 10 11:00:00 2003
+	ADDED: possibility to everride which 'cpp' is used (ex: arm-elf-cpp)
+	CHANGED: the returned list
+	
+	
 
